syntax = "proto3";

message CreateViewRequest {
    string app_id = 1;
    string name = 2;
    string desc = 3;
    oneof one_of_thumbnail { string thumbnail = 4; };
    ViewType view_type = 5;
}
message View {
    string id = 1;
    string app_id = 2;
    string name = 3;
    string desc = 4;
    ViewType view_type = 5;
}
message RepeatedView {
    repeated View items = 1;
}
enum ViewType {
    Docs = 0;
}
